--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
     <title>Darkroom</title>
 </head>
 <body style="background-color: #f4f4f4;">
+
+<h1 style="text-align: center; font-size: 3rem; color: green;">MILESTONE 2</h1>
+
+
   <div class="navbar-fixed">
     <nav class="turquoise" >
       <div class="nav-wrapper  container">
