Add big MILESTONE 4 to landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,11 @@
 </head>
 <body style="background-color: #f4f4f4;">
 
-<h1 style="text-align: center; font-size: 3rem; color: green;">MILESTONE 2</h1>
+<div style="text-align: center; padding: 40px;">
+  <h1 style="font-size: 60px; color: #2c3e50; font-weight: bold;"> MILESTONE 2</h1>
+  <h1 style="font-size: 60px; color: #27ae60; font-weight: bold;"> MILESTONE 3</h1>
+  <h1 style="font-size: 60px; color: #e67e22; font-weight: bold;"> MILESTONE 4</h1>
+</div>
 
 
   <div class="navbar-fixed">
